src/test/deca/syntax/valid/resultats/test22_read-lex.res
'{': [@0,225:225='{',<36>,14:0]
IDENT: [@1,228:230='int',<26>,15:1]
IDENT: [@2,232:232='x',<26>,15:5]
';': [@3,233:233=';',<39>,15:6]
IDENT: [@4,236:240='float',<26>,16:1]
IDENT: [@5,242:242='f',<26>,16:7]
';': [@6,243:243=';',<39>,16:8]
IDENT: [@7,248:248='x',<26>,18:1]
'=': [@8,249:249='=',<29>,18:2]
'readInt': [@9,250:256='readInt',<15>,18:3]
'(': [@10,257:257='(',<34>,18:10]
')': [@11,258:258=')',<35>,18:11]
';': [@12,259:259=';',<39>,18:12]
IDENT: [@13,262:262='f',<26>,19:1]
'=': [@14,263:263='=',<29>,19:2]
'readFloat': [@15,264:272='readFloat',<16>,19:3]
'(': [@16,273:273='(',<34>,19:12]
')': [@17,274:274=')',<35>,19:13]
';': [@18,275:275=';',<39>,19:14]
'}': [@19,277:277='}',<37>,20:0]
