src/test/deca/syntax/invalid/resultats/test40_decl_method-lex.res
'class': [@0,315:319='class',<7>,15:0]
IDENT: [@1,321:321='A',<26>,15:6]
'{': [@2,323:323='{',<36>,15:8]
IDENT: [@3,326:328='int',<26>,16:1]
IDENT: [@4,330:332='fct',<26>,16:5]
'(': [@5,333:333='(',<34>,16:8]
IDENT: [@6,334:336='int',<26>,16:9]
')': [@7,338:338=')',<35>,16:13]
'{': [@8,339:339='{',<36>,16:14]
'}': [@9,340:340='}',<37>,16:15]
'}': [@10,342:342='}',<37>,17:0]
